[tool.poetry]
name = "repl-nix-if-gatekeeper"
version = "0.1.0"
description = ""
authors = ["eldrago4 <tred38434@gmail.com>"]
readme = "Progress.md"
packages = [{include = "repl_nix_if_gatekeeper"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
